haproxy/haproxy-namespace-0.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-controller

---
